@@ -1,3 +1,7 @@
+2025-02-10  Robby Stephenson  <robby@periapsis.org>
+
+	* Updated ComicVine data source.
+
 2025-02-09  Robby Stephenson  <robby@periapsis.org>
 
 	* Updated Filmaffinity data source.
